# tesserae

./: Flash Attention_in_Tessera.md  Hierarchical_Reasoning_Model_HRM.md  LICENSE  README.md  Tessera_Deep_Learning_Programing_Model.md  Tessera_Programming_Model_V1.md  Tessera_Standard_Operations.md  Tessera_vs_Jax.md  cute_tessera_enhancement.md  flashmla_tessera.md  macos_setup_script.sh  tessera_ir_layers.md  tessera_main_readme.md
Tessera_Code/: CMakeLists.txt  README.md
Tessera_Code/.github/workflows/: build.yml
Tessera_Code/compiler/include/tessera/compiler/: api.h
Tessera_Code/compiler/mlir/dialects/: GraphIR.td  ScheduleIR.td  TileIR.td
Tessera_Code/compiler/mlir/passes/: LowerToSchedule.cpp  LowerToTarget.cpp  LowerToTile.cpp
Tessera_Code/compiler/src/: compiler_api.cpp
Tessera_Code/examples/: distributed_moe_stub.py  hello_tessera.py
Tessera_Code/python/: pyproject.toml
Tessera_Code/python/tessera/: __init__.py  graph.py  ops.py
Tessera_Code/runtime/include/tessera/runtime/: api.h  device.h  errors.h  tensor.h
Tessera_Code/runtime/src/: api.cpp  device.cpp  logging.cpp  memory.cpp  stream.cpp
Tessera_Code/runtime/src/backends/: cuda_backend.cpp  rocm_backend.cpp
Tessera_Code/runtime/src/collectives/: nccl_stub.cpp  nvshmem_stub.cpp
Tessera_Concept_Research/: Background.md  NVL72_Mapping.md  (+6 more)
Tessera_Unified_Master_Skeleton/: CMakeLists.txt  Tessera_Unified_Master_Skeleton.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/compiler/mlir/dialects/: GraphIR_GEMM_BN.td  ScheduleIR_GEMM_BN.td  TileIR_GEMM_BN.td
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/compiler/mlir/passes/: LowerGraphToSchedule_GEMM_BN.cpp  LowerScheduleToTile_GEMM_BN.cpp  LowerTileToTarget_GEMM_BN.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/docs/: VerticalSlice_GEMM_BN.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/examples/: gemm_bn_python_frontend.py
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/runtime/src/: api.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN/runtime/src/kernels/: gemm_naive_ptx.h
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v2/compiler/mlir/dialects/: GraphIR_GEMM_BN.td  ScheduleIR_GEMM_BN.td
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v2/compiler/mlir/examples/: 02_after_schedule.mlir
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v2/docs/: VerticalSlice_GEMM_BN.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v2/runtime/src/kernels/: gemm_naive_ptx.h
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/compiler/mlir/dialects/: TileIR_GEMM_BN.td
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/compiler/mlir/examples/: 01_graph.mlir  03_after_tile.mlir  nvvm_mma_example.mlir
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/compiler/mlir/passes/: LowerGraphToSchedule_GEMM_BN.cpp  LowerScheduleToTile_GEMM_BN.cpp  LowerTileToNVVM_GEMM_Sketch.cpp  LowerTileToTarget_GEMM_BN.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/docs/: VerticalSlice_GEMM_BN.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/examples/: run_pipeline_demo.py
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v3/runtime/src/: api.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v4/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v4/compiler/mlir/examples/: nvvm_wgmma_example.mlir
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v4/docs/: README_v4.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v4/runtime/src/: api.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v4/tests/: test_runtime.py
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v5/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v5/docs/: README_v5.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v5/runtime/src/: api_cpu.cpp  api_cuda.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v5/runtime/src/cuda/: kernels.cu
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v5/tests/: test_runtime.py
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v6/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v6/docs/: README_v6.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v6/runtime/src/: api_cpu.cpp  api_cuda.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v6/runtime/src/cuda/: gemm_wmma.cu  kernels.cu
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v6/tests/: test_runtime.py
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v7/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v7/docs/: README_v7.md
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v7/runtime/src/: api_cuda.cpp
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v7/runtime/src/cuda/: gemm_wgmma_sm90.cu  gemm_wmma.cu
Tessera_Unified_Master_Skeleton/Tessera_VerticalSlice_GEMM_BN_v7/tests/: test_runtime.py
Tessera_Unified_Master_Skeleton/docs/: README_UNIFIED.md
Tessera_Unified_Master_Skeleton/tessera/runtime/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/tessera/runtime/src/: api_cpu.cpp  api_cuda.cpp
Tessera_Unified_Master_Skeleton/tessera/runtime/src/cuda/: gemm_wgmma_sm90.cu  gemm_wmma.cu
Tessera_Unified_Master_Skeleton/tessera/verticals/gemm_bn/: CMakeLists.txt
Tessera_Unified_Master_Skeleton/tessera/verticals/gemm_bn/tests/: test_runtime_vs.py
tessera_Prototype_Sample_code/: CMakeLists.txt  PACKAGING_README.md  README_MOCK_RUNTIME.md  demo.c  tessera.pc  tessera_runtime.h  tessera_runtime_mock.c
tessera_Prototype_Sample_code/tessera_runtime_py/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
tessera_Prototype_Sample_code/tessera_runtime_py/tessera_runtime/: __init__.py  core.py
(+151 files in other folders)
